# DeuteriumC

./: .gitignore  CMakeLists.txt  LICENSE  README.md
inc/conf/: istream.h  list.h  str.h
inc/dtc/: dtc.h  istream.h  list.h  node.h  status.h  str.h
inc/internal/: common.h  istream.h  list.h  node.h  str.h  utils.h
scripts/: clean.sh  line_police.py
src/: dtc.c  istream.c  list.c  node.c  str.c
test/: str.c
